# applymanager

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.api-dev  README.md  docker-compose.dev.yml  docker-compose.yml  index.html  package-lock.json  package.json  requirements.txt  vite.config.ts
db/: Dockerfile
db/init/: 001_init.sql
docs/: ARCHITECTURE.md  PROJECT.md  README.md  WORKLOG.md
electron/: main.cjs  preload.cjs
local/: CMakeLists.txt
local/src/: MainWindow.cpp  MainWindow.h
scripts/: run-all.sh  run-dev.sh  setup-server-env.sh
server/: index.js  main.py
server/local/: __init__.py  routes.py
server/modules/: __init__.py  common.py  cv.py  cv_db.py  db.py  errors.py  offers.py  preferences.py  rate_limit.py  registry.py  scrape.py
server/scrapers/: http.js  http.py  index.js  index.py  parsers.js  parsers.py  providers.py
server/web/: __init__.py  routes.py
server_py/: main.py
server_py/scrapers/: parsers.py
src/: App.tsx  ErrorBoundary.tsx  main.tsx  styles.css  topTabRouting.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: CvPanel.tsx  ScrollArea.tsx
src/constants/: app.ts
src/domain/: status.ts
src/i18n/: translations.ts
src/types/: app.ts
src/utils/: apiFetch.ts  appHelpers.ts
tests/: test_common.py  test_offers_stats.py
tests/regression/: test_cv_pdf_regression.py  test_excel_import_regression.py  test_offers_stats_regression.py  test_web_routes_regression.py
(+2 files in other folders)
