[package]
name = "applymanager"
version = "0.1.0"
description = "ApplyManager desktop app"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "applymanager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0" }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
